--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "league/flysystem-aws-s3-v3": "3.0",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "transbank/transbank-sdk": "4"
     },
     "require-dev": {
