--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
         "php": "^8.2",
         "anayarojo/shoppingcart": "^4.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "fakerphp/faker": "^1.23",
         "filament/filament": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "3.0",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "transbank/transbank-sdk": "4",
-        "fakerphp/faker": "^1.23"
+        "transbank/transbank-sdk": "4"
     },
     "require-dev": {
         "laravel/pail": "^1.2.2",
